Fix visibility classes to work with new media queries.

--- a/src/base/variables.scss
+++ b/src/base/variables.scss
@@ -99,4 +99,4 @@ $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
 $medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
 
 $large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
-$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
+$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)})";
